Added converter class. Should've started with this tbh. :P

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,9 @@
     "numeric": "cpp",
     "optional": "cpp",
     "random": "cpp"
+  },
+  "workbench.colorCustomizations": {
+    "editorIndentGuide.activeBackground": "#ffffff",
+    "editorRuler.foreground": "#ffffff77"
   }
 }
